--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@pinia/nuxt": "^0.5.1",
     "nuxt": "^3.11.2",
+    "nuxt-swiper": "^1.2.2",
+    "pinia": "^2.1.7",
+    "tailwind-scrollbar": "^3.1.0",
+    "universal-cookie": "^7.1.4",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3"
