--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "tailwind-scrollbar": "^3.1.0",
     "universal-cookie": "^7.1.4",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue-router": "^4.3.0",
+    "vue3-toastify": "^0.2.1"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
