--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@lottiefiles/lottie-player": "^2.0.4",
     "@pinia/nuxt": "^0.5.1",
     "nuxt": "^3.11.2",
     "nuxt-swiper": "^1.2.2",
